[package]
name = "toki"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
chrono = "0.4"
hex = "0.4"
ed25519-dalek = "2.0"
rand = "0.8"
libp2p = { version = "0.53", features = ["tokio", "tcp", "dns", "noise", "yamux", "gossipsub", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"